kubernetes/strategies/shadow/shadow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-monolith-shadow-service
  namespace: default
  labels:
    app: nodejs-monolith
    track: shadow
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: nodejs-monolith
    track: shadow
