kubernetes/strategies/shadow/ingress-mirror.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-monolith-mirror-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/mirror-target: "http://nodejs-monolith-shadow-service.default.svc.cluster.local:5000"
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-monolith-stable-service
                port:
                  number: 5000
